@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  - Add /x to skip_plugins regexp.
+
 4.206     2015-03-01T03:58:20Z
 
   - Remove Test::ChangesHasContent so that xt doesn't fail in CI.
